--- a/app/pages/no16/index.njk
+++ b/app/pages/no16/index.njk
@@ -20,27 +20,28 @@
 <main class="no16-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h3 class="ttl-tertiary">法人経営者様・個人事業主様へ。</h3>
+      <h3 class="ttl-tertiary">人材の定着・従業員のモチベーションUPに。</h3>
 
-      <h2 class="ttl-secondary">資金繰り・資金調達をサポートするサービス</h2>
+      <h2 class="ttl-secondary">福利厚生を充実できるサービス</h2>
 
-      <h4 class="ttl-quaternary">クレディセゾンは、資金繰り改善や資金調達をもっと手軽に実現できる、<br>
-        サ－ビスをご提供いたします。</h4>
+      <h4 class="ttl-quaternary">クレディセゾンは、従業員のみなさまの暮らしに役立つ様々なサービスを、<br>
+        最大66％OFFで利用できるお得な福利厚生優待サービスをご提供しています。</h4>
     </div>
   </section>
 
   <section class="section-primary">
     <div class="container-1200">
-      <h2 class="ttl-secondary">こんなニーズやお悩みありませんか？</h2>
+      <h2 class="ttl-secondary">多くの中小企業が抱える課題</h2>
 
       <ul class="flex jcC gap30 card-list">
         <li class="card-type6">
           <a href="#" class="card">
             <div class="ttl-quaternary-container">
-              <h4 class="ttl-quaternary">資金繰りを改善したい</h4>
+              <h4 class="ttl-quaternary">人材が定着しない・<br>
+                採用難易度も上がっている</h4>
             </div>
 
-            <div class="flex gap30 card-body">
+            <div class="card-body">
               <div class="circle-container">
                 イラスト
                 <br>
@@ -50,9 +51,9 @@
               </div>
 
               <ul class="check-list">
-                <li>入金サイトが長く、資金繰りに困っている</li>
-                <li>支払いを先延ばししたい</li>
-                <li>金融機関に知られずに解決したい</li>
+                <li>従業員のモチベーションが低下している</li>
+                <li>従業員のワークライフバランスを充実させたい</li>
+                <li>年々採用コストが上がっている</li>
               </ul>
             </div>
 
@@ -65,10 +66,10 @@
         <li class="card-type6">
           <a href="#" class="card">
             <div class="ttl-quaternary-container">
-              <h4 class="ttl-quaternary">資金調達をしたい</h4>
+              <h4 class="ttl-quaternary">福利厚生を入れたいが <br> 費用や手間がかかりそう</h4>
             </div>
 
-            <div class="flex gap30 card-body">
+            <div class="card-body">
               <div class="circle-container">
                 イラスト
                 <br>
@@ -78,9 +79,35 @@
               </div>
 
               <ul class="check-list">
-                <li>金融機関以外から事業資金を調達したい</li>
-                <li>無担保・無保証人で借りたい</li>
-                <li>できる限り低金利で借りたい</li>
+                <li>自社で導入・運用しようとすると多くの費用がかかりそう</li>
+                <li>社内の業務負担を軽減したい</li>
+              </ul>
+            </div>
+
+            <div class="circle-with-arrow">
+              <div class="arrow-down"></div>
+            </div>
+          </a>
+        </li>
+
+        <li class="card-type6">
+          <a href="#" class="card">
+            <div class="ttl-quaternary-container">
+              <h4 class="ttl-quaternary">福利厚生を入れているが <br> あまり使われていない</h4>
+            </div>
+
+            <div class="card-body">
+              <div class="circle-container">
+                イラスト
+                <br>
+                または
+                <br>
+                アイコン
+              </div>
+
+              <ul class="check-list">
+                <li>使用率が低く、使う人が偏ってしまっている</li>
+                <li>多くの従業員に使ってもらえる福利厚生がほしい</li>
               </ul>
             </div>
 
@@ -95,117 +122,90 @@
 
   <section class="section-secondary">
     <div class="container-1200">
-      <h2 class="ttl-secondary">資金繰り改善や資金調達をもっと手軽に</h2>
+      <h2 class="ttl-secondary">「セゾンフクリコ」がまとめて解決します。</h2>
+
+      <div class="up-triangle"></div>
+
+      <div class="section-img">
+        <img src="/assets/img/introduce_page/saison-fukurico.png" alt="">
+      </div>
+
+      <h3 class="ttl-tertiary">
+        セゾンフクリコは、<div class="yellow-bottom">
+          わずか月額385円(税込)
+        </div> でご利用できる中小企業様向けの法定外複利厚生サービスです。<br>
+        従業員のエンゲージメント・企業価値の向上に貢献します。
+      </h3>
 
       <div class="panel-primary">
-        <div class="cat">資金繰り改善サポート</div>
-
         <div class="notification-panel2">
           <div class="relation">
             <h3 class="single__ttl">
-              <span>経費清算クラウド「Concur Expense」</span>
+              <span>①従業員のエンゲージメント向上で、離職防止に貢献</span>
             </h3>
 
-            <div class="card-type13">
-              <dd>「支払い.com」を利用すれば、期限の迫った請求書も、支払いまで最長60日余裕をプラス。資金繰りを改善し、借りずに事業を加速できます。
-                必要なのはお手持ちのカードだけ。審査も書類も必要ありません。</dd>
+            <div class="card-type19">
+              <dd>
+                福利厚生の導入や見直しは、従業員の労働環境改善や生活環境の向上につながります。従業員が高いパフォーマンスで業務を行うことは、生産性の向上につながるため、会社にとっても大きなメリットがあります。企業価値の向上で採用の課題を克服します。
+              </dd>
 
-              <div class="flex gap30 aiC sp-reverse">
-                <div class="sec-left-wrapper">
-                  <figure class="sec__img"><img src="/assets/img/introduce_page/cash-flow.png" alt=""></figure>
+              <div class="card-list flex gap30">
+                <div class="card">
+                  <div class="cat">従業員のメリット</div>
+                  <ul class="circle-list">
+                    <li>生活や健康が安定・向上する</li>
+                    <li>スキルアップの機会が得られる</li>
+                    <li>パフォーマンスが向上する</li>
+                    <li>ライフワークバランスが改善する</li>
+                  </ul>
                 </div>
 
-                <div class="gap-10 sec-right-wrapper">
-                  <div class="card-type18">
-                    <div class="cat">利用可能ブランド</div>
-
-                    <div class="card-body">
-                      <figure class="sec__img"><img src="/assets/img/credit_cards/saison.png" alt=""></figure>
-                      <figure class="sec__img"><img src="/assets/img/credit_cards/master_card.png" alt=""></figure>
-                      <figure class="sec__img"><img src="/assets/img/credit_cards/visa.png" alt=""></figure>
-
-                      <p>すべてのセゾンカードをご利用いただけます。</p>
-                    </div>
-                  </div>
+                <div class="card">
+                  <div class="cat">従業員のメリット</div>
+                  <ul class="circle-list">
+                    <li>生活や健康が安定・向上する</li>
+                    <li>スキルアップの機会が得られる</li>
+                    <li>パフォーマンスが向上する</li>
+                    <li>ライフワークバランスが改善する</li>
+                  </ul>
                 </div>
               </div>
-
-              <a href="#" class="btn03 small">支払い.comをもっと詳しく</a>
             </div>
           </div>
         </div>
       </div>
 
       <div class="panel-secondary">
-        <div class="cat">資金調達サポート</div>
-
         <div class="notification-panel2">
           <div class="relation">
             <h3 class="single__ttl">
-              <span>セゾンビジネスサポートローン（カード会員様限定）</span>
+              <span>②完全アウトソーシングで運用の手間いらず</span>
             </h3>
 
-            <div class="card-type13">
-              <dd>
-                セゾンビジネスサポートローンは、下記対象のビジネスカードでご利用頂ける中小企業・個人事業主の経営を支援する融資サービスです。お持ちのビジネスカードに、最大950万円のゆとりあるご融資可能枠と借り入れ額に応じた優遇金利をご用意しております。カード1枚で用途を問わず、ビジネスのあらゆるシーンで幅広くご利用いただけます。。
-              </dd>
+            <dd>
+              福利厚生の種類を増やして充実させるほど、運営の手間はかかります。しかし、「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので導入事業者様に業務をご負担いただく必要はありません。
+            </dd>
+            <div class="flex gap30 card-container">
+              <div class="card-circle">
+                <div class="card-circle-text"> イラスト
+                  <br>
+                  または
+                  <br>
+                  アイコン
+                </div>
+              </div>
 
-              <ul class="flex gap30 card-list">
-                <li class="card-type9">
-                  <h3 class="card__box--ttl">対象（下記カードをお持ちの方）</h3>
+              <div class="card-button">
+                <a href="#" class="btn07">社内規定の作成</a>
+                <a href="#" class="btn07">申請書の作成や処理</a>
+                <a href="#" class="btn07">従業員からの質問・対応</a>
+                <a href="#" class="btn07">利用者の把握や管理</a>
+                <a href="#" class="btn07">利用後の処理</a>
+              </div>
 
-                  <div class="container">
-                    <div class="flex gap20 card__box-wrapper">
-                      <div class="credit-card02">
-                        <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image"
-                          class="credit-card-img">
-                      </div>
-
-                      <div class="card__box-title">
-                        <h3 class="ttl-terianry">セゾンコバルト・ビジネス・ アメリカン・エキスプレス®・カード</h3>
-                      </div>
-                    </div>
-
-                    <div class="flex gap20 card__box-wrapper">
-                      <div class="credit-card02">
-                        <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image"
-                          class="credit-card-img">
-                      </div>
-
-                      <div class="card__box-title">
-                        <h3 class="ttl-terianry">セゾンコバルト・ビジネス・ アメリカン・エキスプレス®・カード</h3>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="card-type9">
-                  <h3 class="card__box--ttl card__box-ttl02">融資サービスの内容</h3>
-
-                  <div class="container">
-                    <div class="flex gap30 card__box-wrapper card__box__wrapper-right">
-                      <div>
-                        <dd>融資枠</dd>
-                        <h3 class="ttl-tertiary">最大950万円
-                          <small>※1</small>
-                        </h3>
-                      </div>
-                      <div>
-                        <dd>金利</dd>
-                        <h3 class="ttl-tertiary">2.8％～9.6%
-                          <small>※1</small>
-                        </h3>
-                      </div>
-                    </div>
-                  </div>
-
-                  <dd>※1 初回は融資実行となります。ご融資枠の上限は、年収の1/3以内となります。<br>※2
-                    ご利用可能枠が110万円以上の方が対象。本サービスご利用前の金利はセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードの場合14.5％、セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カードの場合18.0％です。
-                  </dd>
-                </li>
-              </ul>
-
-              <a href="#" class="btn03">セゾンビジネスサポートローンをもっと詳しく</a>
+              <div class="card-txt">
+                <h3 class="ttl-tertiary">完全アウトソーシング型の福利厚生サービスなので、新たな業務が増える心配はありません。運用は全てお任せください。</h3>
+              </div>
             </div>
           </div>
         </div>
@@ -215,113 +215,57 @@
         <div class="notification-panel2">
           <div class="relation">
             <h3 class="single__ttl">
-              <span>ビジネスファンディング（全東信加盟店様限定）</span>
+              <span>③全国を網羅した豊富な特別優待メニュー</span>
             </h3>
 
-            <div class="card-type13">
-              <dd>
-                クレディセゾンのビジネスファンディングは、毎月のクレジットカード売上を「いま」必要な資金に変えるオンライン資金調達サービスです。（将来債権買取サービス）保証人、担保は不要でWebですぐにお申し込みが完了します。
-              </dd>
+            <dd>福利厚生はただ導入をすればいいというものではなく、従業員に利用してもらうことに意味があります。セゾンフクリコは、多様化する従業員のニーズに応じた、幅広いサービスを各種取りそろえています。</dd>
 
-              <div class="flex gap50 aiC sp-reverse">
-                <figure class="sec__img"><img src="/assets/img/introduce_page/business-fantink.png" alt=""></figure>
-
-                <div class="gap-10 sec-right-wrapper">
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">1</div>
-                      <h5 class="ttl-senary"><span class="yellow-bottom">保証人、担保は不要</span></h5>
-                    </dt>
-                  </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">2</div>
-                      <h5 class="ttl-senary"><span class="yellow-bottom">
-                          最短2営業日</span>で入金可能</h5>
-                    </dt>
-                  </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">3</div>
-                      <h5 class="ttl-senary">
-                        <span class="yellow-bottom">初期費用・月額費用、延滞金もな</span> <br> し
-                      </h5>
-                    </dt>
-                  </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">4</div>
-                      <h5 class="ttl-senary">ご精算は
-                        <span class="yellow-bottom">売上に応じた定率精</span>だから <br> 安心
-                      </h5>
-                    </dt>
-                  </dl>
-                </div>
-              </div>
+            <div class="card-icon flex">
+              <div> <img src="/assets/img/introduce_page/carousel-01.png" alt=""></div>
+              <div> <img src="/assets/img/introduce_page/cutlery-set-01.png" alt=""></div>
+              <div> <img src="/assets/img/introduce_page/mirror-01.png" alt=""></div>
+              <div> <img src="/assets/img/introduce_page/golf-01.png" alt=""></div>
+              <div> <img src="/assets/img/introduce_page/book-01.png" alt=""></div>
+              <div> <img src="/assets/img/introduce_page/heart-in-hand-01.png" alt=""></div>
+              <div> <img src="/assets/img/introduce_page/flower-01.png" alt=""></div>
+              <div> <img src="/assets/img/introduce_page/bag-01.png" alt=""></div>
             </div>
 
-            <a href="#" class="btn03 small">ビジネスファンディングをもっと詳しく</a>
-          </div>
-        </div>
-      </div>
+            <div class="flex gap30 card-list">
+              <div class="card-type11">
+                <a href="#" class="card">
+                  <h3 class="ttl-tertiary">全国25,000以上の施設で最大66%OFFで利用可能</h3>
 
-      <div class="panel-quaterary">
-        <div class="notification-panel2">
-          <div class="relation">
-            <h3 class="single__ttl">
-              <span>MONEY CARD</span>
-            </h3>
+                  <div class="flex gap30 item-list">
+                    <div class="item__img">イラスト<br>または
+                      <br>
+                      アイコン
+                    </div>
 
-            <div class="card-type13">
-              <dd>
-                MONEY
-                CARDとは、キャッシングリボ専用のローンカードです。全国の郵便局をはじめ、都市銀行、地方銀行、信用金庫、コンビニなどで、ご利用可能枠の範囲内で繰り返しご利用いただけます。目的用途を事業資金としても活用できる余裕のある融資枠を設定しています。
-              </dd>
+                    <div class="item__box">
+                      <h3 class="ttl-tertiary">レジャーや健康増進、育児・介護のライフサポートなど、従業員の方々が利用しやすい多彩な優待を取り揃えています。</h3>
+                    </div>
+                  </div>
+                </a>
+              </div>
 
-              <div class="flex gap50 aiC sp-reverse">
-                <figure class="sec__img"><img src="/assets/img/introduce_page/saison-03.png" alt=""></figure>
+              <div class="card-type11">
+                <a href="#" class="card">
+                  <h3 class="ttl-tertiary">全国25,000以上の施設で最大66%OFFで利用可能</h3>
 
-                <div class="gap-10 sec-right-wrapper">
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">1</div>
-                      <h5 class="ttl-senary"><span class="yellow-bottom">全国のコンビニ・A</span>TMでご利用可能</h5>
-                    </dt>
-                  </dl>
+                  <div class="flex gap30 item-list">
+                    <div class="item__img">イラスト<br>または
+                      <br>
+                      アイコン
+                    </div>
 
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">2</div>
-                      <h5 class="ttl-senary"><span class="yellow-bottom">
-                          ご指定の口座</span>に最短数十秒で振り<br>込み</h5>
-                    </dt>
-                  </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">3</div>
-                      <h5 class="ttl-senary">
-                        ご利用用途は自由<span class="yellow-bottom">。ご利用可能枠：最大300万</span> <br> 円
-                      </h5>
-                    </dt>
-                  </dl>
-
-                  <dl class="flex aiC gap30 sec01-right-box">
-                    <dt class="flex aiC gap20 sp-fS">
-                      <div class="number-circle">4</div>
-                      <h5 class="ttl-senary">新規のご契約＆ご利用
-                        <span class="yellow-bottom">で、最大2カ月分のご利息をキャッ </span>
-                      </h5>
-                    </dt>
-                  </dl>
-                </div>
+                    <div class="item__box">
+                      <h3 class="ttl-tertiary"> 日本語、英語のほか中国語（簡体、繁体）、ベトナム語に対応しています！</h3>
+                    </div>
+                  </div>
+                </a>
               </div>
             </div>
-
-            <a href="#" class="btn03 small">MONEY CARDをもっと詳しく</a>
           </div>
         </div>
       </div>
@@ -330,17 +274,31 @@
 
   <section class="section-tertiary">
     <div class="container-1200">
-      <div class="card-type18">
+      <h2 class="ttl-secondary">ご利用はわずか月額385円（税込）/1アカウント</h2>
+
+      <h3 class="ttl-tertiary">ご法人様向け/個人事業主様向けプランをご用意しています。</h3>
+
+      <div class="section-img">
+        <img src="/assets/img/introduce_page/saison-fukurico.png" alt="">
+      </div>
+
+      <a href="#" class="btn03">セゾンフクリコをもっと詳しく</a>
+    </div>
+  </section>
+
+  <section class="section-quaterary">
+    <div class="container-1200">
+      <div class="card-type21">
         <div class="ttl-tertiary-wrapper">
-          <h3 class="ttl-tertiary border-bottom">資金繰りや資金調達にお悩みの方へ</h3>
+          <h3 class="ttl-tertiary border-bottom">法定外福利厚生サービスをご検討中の事業者様へ</h3>
         </div>
 
         <h2 class="ttl-secondary">
-          素早く・手軽に解決できるサービスをご提供します</h2>
+          「従業員の満足度を高めて人材が定着する会社に</h2>
 
         <h3 class="ttl-tertiary fw-normal">
-          経営者様や個人事業主様にとって資金繰り改善や資金調達は、急ぎ解決したい課題だと思います。クレディセゾンはそういった方向けに
-          <strong>「素早く・手軽に解決できる」</strong>サービスをご提供しています。お気軽にご相談下さい。
+          企業が法定外福利厚生を独自にどれだけ導入をしているかが、福利厚生における充実度を決めるポイントとなります。
+          <strong>従業員が定着し、高いパフォーマンスで業務を行える</strong>よう法定外福利厚生サービスの導入を検討してみませんか？
         </h3>
 
         <div class="flex gap60 card-list">
