--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1340,6 +1340,7 @@
   width: calc(50% - 15px);
 
   .card {
+    width: 100%;
     background-color: #e1e1e1;
     box-shadow: none;
     padding: 30px 30px 34px 30px;
@@ -1347,7 +1348,7 @@
     .ttl-tertiary {
       letter-spacing: 2px;
       line-height: 28px;
-      margin-bottom: 30px;
+      margin-bottom: 0px;
     }
 
     .item__img {
@@ -1358,6 +1359,9 @@
       font-size: 16px;
       padding: 55px 40px;
       vertical-align: middle;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .item__box {
@@ -1786,6 +1790,91 @@
 
     p {
       text-align: left;
+    }
+  }
+}
+
+// カード型 type19
+.card-type19 {
+  padding:0 30px 30px;
+
+  dd {
+    margin-bottom: 30px;
+    text-align: left;
+  }
+
+  .card-list {
+    padding: 0 30px;
+
+    .card {
+      width: calc(50% - 20px);
+
+      .cat {
+        width: 100%;
+        font-size: 20px;
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+// カード型 type20
+.card-type20 {
+  padding:0 30px 30px;
+
+  &__box {
+    &--ttl {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    &--content {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 20px;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      @media #{$sp} {
+        font-size: 16px;
+        margin-bottom: 15px;
+      }
+    }
+  }
+}
+
+// カード型 type21
+.card-type21 {
+  .ttl-primary {
+    margin-bottom: 30px;
+  }
+
+  .ttl-tertiary-wrapper {
+    text-align: center;
+    margin-bottom: 25px;
+
+    .ttl-tertiary.border-bottom {
+      border-bottom: 3px solid #000;
+      display: inline-block;
+      padding-bottom: 5px;
+      margin-bottom: 0;
+    }
+  }
+
+  .ttl-tertiary.fw-normal {
+    font-weight: 400;
+    text-align: left;
+    margin-bottom: 60px;
+  }
+
+  .card-list {
+    .card {
+      width: calc(50% - 30px);
+      padding: 30px 0;
+      border: 1px solid #707070;
+      text-align: center;
     }
   }
 }
@@ -2641,5 +2730,32 @@
     font-size: 12px;
     left: -6px;
     top: 0;
+  }
+}
+
+// Circle list
+.circle-list {
+  padding: 30px;
+  list-style-type: none;
+  background-color: #E1E1E1;
+
+  li {
+    position: relative;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: left;
+    padding-left: 20px;
+  }
+
+  li:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #333;
   }
 }
