--- a/app/assets/scss/4-pages/_no16.scss
+++ b/app/assets/scss/4-pages/_no16.scss
@@ -1,4 +1,4 @@
-.no14-page {
+.no16-page {
   margin: auto;
   padding: 140px 0 0px;
 
@@ -47,7 +47,7 @@
 
     .card-list {
       .card-type6 {
-        width: calc(50% - 15px);
+        width: calc(100% / 3 - 20px);
         padding: 0;
 
         .card {
@@ -61,10 +61,11 @@
           .card-body {
             justify-content: flex-start;
             flex-wrap: nowrap;
+            margin-bottom: 30px;
 
             .circle-container {
-              margin-left: 0;
-              margin-right: 0;
+              margin: auto;
+              margin-bottom: 30px;
             }
 
             .check-list {
@@ -89,21 +90,40 @@
 
   .section-secondary {
     text-align: center;
-    padding: 71px 120px 70px;
+    padding: 120px 120px 70px;
     background-color: #eeeeee;
+    position: relative;
+
+    .up-triangle {
+      width: 0;
+      height: 0;
+      border-left: 180px solid transparent;
+      border-right: 180px solid transparent;
+      border-top: 60px solid #ffffff;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 0;
+    }
 
     .ttl-secondary {
       font-size: 32px;
-      margin-bottom: 60px;
+      margin-bottom: 30px;
     }
 
-    .cat {
-      width: 100%;
+    .section-img {
+      margin: auto;
+      max-width: 479px;
+      text-align: center;
       margin-bottom: 30px;
-      font-size: 24px;
-      font-weight: bold;
-      color: white;
-      padding: 8px 0;
+    }
+
+    .ttl-tertiary {
+      .yellow-bottom {
+        font-weight: 600;
+        background: linear-gradient(to bottom, transparent 50%, yellow 50%);
+        display: inline;
+      }
     }
 
     .panel-primary {
@@ -112,61 +132,78 @@
       .notification-panel2 {
         padding: 0;
 
-        .card-type13 {
-          margin-bottom: 60px;
-
-          dd {
-            margin-bottom: 30px;
-          }
-
-          .sp-reverse {
-            margin-bottom: 60px;
-
-            .sec-left-wrapper {
-              max-width: 916px;
-
-              .sec__img {
-                max-width: 100%;
-              }
-            }
-
-            .sec-right-wrapper {
-              max-width: 194px;
-
-              .card-type18 {
-                .cat {
-                  background-color: #000;
-                  padding: 10px 0;
-                  font-size: 16px;
-                  margin: 0;
-                }
-              }
-            }
+        .relation {
+          border: 1px solid #003f98;
+          .single__ttl {
+            background-color: #003f98;
           }
         }
       }
     }
 
     .panel-secondary {
-      margin-bottom: 30px;
+      margin-bottom: 60px;
 
       .notification-panel2 {
         padding: 0;
 
-        .card-type13 {
-          margin-bottom: 60px;
+        .relation {
+          border: 1px solid #003f98;
+          padding-bottom: 30px;
+
+          .single__ttl {
+            background-color: #003f98;
+          }
 
           dd {
             margin-bottom: 30px;
+            text-align: left;
+            padding: 0 30px;
           }
 
-          .card-list {
-            margin-bottom: 60px;
+          .card-container {
+            padding: 0 30px;
+            flex-wrap: nowrap;
+            align-items: center;
 
-            .card-type9 {
-              dd {
+            .card-circle {
+              width: calc(28% - 20px);
+              padding-bottom: calc(28% - 20px);
+              border-radius: 50%;
+              background-color: #ccc;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              position: relative;
+              flex-shrink: 0;
+
+              .card-circle-text {
+                display: block;
+                position: absolute;
+                display: flex;
+                top: 50%;
+                left: 50%;
+                align-items: center;
+                justify-content: center;
+                transform: translate(-50%, -50%);
+                flex-shrink: 0;
+              }
+            }
+
+            .card-button {
+              width: calc(22% - 20px);
+              flex-shrink: 0;
+
+              .btn07:last-child {
                 margin-bottom: 0;
               }
+            }
+
+            .card-txt {
+              width: calc(50% - 20px);
+              font-weight: 500;
+              flex-shrink: 0;
+              text-align: left;
             }
           }
         }
@@ -174,29 +211,72 @@
     }
 
     .panel-tertiary {
-      margin-bottom: 30px;
+      margin-bottom: 60px;
 
       .notification-panel2 {
         padding: 0;
 
-        .card-type13 {
-          margin-bottom: 30px;
+        .relation {
+          border: 1px solid #003f98;
+          padding-bottom: 30px;
+
+          .single__ttl {
+            background-color: #003f98;
+          }
 
           dd {
             margin-bottom: 30px;
+            text-align: left;
+            padding: 0 30px;
           }
 
-          .sp-reverse {
-            margin-bottom: 30px;
+          .card-icon {
+            flex-wrap: nowrap;
+            margin-bottom: 60px;
 
-            .sec__img {
-              max-width: 391px;
+            img {
+              width: auto;
+              flex-basis: calc(10% - 10px);
             }
           }
-        }
 
-        .btn03 {
-          margin-bottom: 30px;
+          .card-list {
+            padding: 0 60px;
+
+            .card-type11 {
+              .card {
+                background-color: #fff;
+                border: 1px solid #707070;
+                border-radius: 10px;
+                padding: 0;
+
+                .ttl-tertiary {
+                  text-align: center;
+                  padding: 8px 0;
+                  border-bottom: 1px solid #707070;
+                  letter-spacing: 0px;
+                }
+
+                .item-list {
+                  padding: 30px;
+
+                  .item__img {
+                    width: 178px;
+                    height: 142px;
+                    padding: 0 30px;
+                    background-color: #e1e1e1;
+                  }
+
+                  .ttl-tertiary {
+                    border-bottom: 0;
+                    font-weight: 400;
+                    padding: 0;
+                    text-align: left;
+                  }
+                }
+              }
+            }
+          }
         }
       }
     }
@@ -240,38 +320,33 @@
   }
 
   .section-tertiary {
-    padding: 70px 120px;
-    background-color: #fff;
+    padding: 70px 0;
 
-    .card-type18 {
-      .ttl-primary {
-        margin-bottom: 30px;
-      }
+    .ttl-secondary {
+      margin-bottom: 30px;
+    }
 
-      .ttl-tertiary-wrapper {
-        text-align: center;
-        margin-bottom: 25px;
+    .ttl-tertiary {
+      margin-bottom: 30px;
+      text-align: center;
+      font-weight: 400;
+    }
 
-        .ttl-tertiary.border-bottom {
-          border-bottom: 3px solid #000;
-          display: inline-block;
-          padding-bottom: 5px;
-          margin-bottom: 0;
-        }
-      }
+    .section-img {
+      max-width: 479px;
+      margin: auto;
+      margin-bottom: 60px;
+    }
+  }
 
-      .ttl-tertiary.fw-normal {
-        font-weight: 400;
-        text-align: left;
-        margin-bottom: 60px;
-      }
+  .section-quaterary {
+    padding: 70px 0;
+    background-color: #E1E1E1;
 
+    .card-type21 {
       .card-list {
         .card {
-          width: calc(50% - 30px);
-          padding: 30px 0;
-          border: 1px solid #707070;
-          text-align: center;
+          background-color: #fff;
         }
       }
     }
