--- a/app/pages/case/index.njk
+++ b/app/pages/case/index.njk
@@ -38,8 +38,10 @@
           </div>
 
           <div class="card--content">
-            <a href="#" class="btn04 small">セゾンプラチナ・ビジネス・
+           <div class="card__header--btn">
+            <a href="#" class="btn04 small">セゾンプラチナ・ビジネス・<br>
               アメリカン・エキスプレスカード</a>
+           </div>
 
             <h4 class="ttl-quaternary">
               最強のコスパとマイル還元率の高さで選択
@@ -62,8 +64,10 @@
           </div>
 
           <div class="card--content">
-            <a href="#" class="btn04 small">セゾンプラチナ・ビジネス プロ・
-              アメリカン・エキスプレス®・カード</a>
+            <div class="card__header--btn">
+              <a href="#" class="btn04 small">セゾンプラチナ・ビジネス プロ・<br>
+                アメリカン・エキスプレス®・カード</a>
+            </div>
 
             <h4 class="ttl-quaternary">
               1％のキャッシュバックというと、「Feeが1％増えた」と同義
@@ -86,8 +90,10 @@
           </div>
 
           <div class="card--content">
-            <a href="#" class="btn04 small">セゾンプラチナ・ビジネス・
-              アメリカン・エキスプレスカード</a>
+            <div class="card__header--btn">
+              <a href="#" class="btn04 small">セゾンプラチナ・ビジネス・<br>
+                アメリカン・エキスプレスカード</a>
+            </div>
 
             <h4 class="ttl-quaternary">
               資金繰りが大幅に改善。JALマイルが貯まるのも嬉しい！
@@ -110,7 +116,9 @@
           </div>
 
           <div class="card--content">
-            <a href="#" class="btn04 small">ETCカード</a>
+            <div class="card__header--btn">
+              <a href="#" class="btn04 small">ETCカード</a>
+            </div>
 
             <h4 class="ttl-quaternary">
               ETCカードの導入で毎月の経費計算処理の手間と時間が削減！
@@ -133,7 +141,9 @@
           </div>
 
           <div class="card--content">
-            <a href="#" class="btn04 small">ETCカード</a>
+            <div class="card__header--btn">
+              <a href="#" class="btn04 small">ETCカード</a>
+            </div>
 
             <h4 class="ttl-quaternary">
               ETCカードの導入で車両管理業務が効率化！
