--- a/app/assets/scss/4-pages/_no37.scss
+++ b/app/assets/scss/4-pages/_no37.scss
@@ -70,61 +70,97 @@
   .section-primary {
     text-align: center;
     padding: 70px 0;
-    background-color: #fff;
+    background-color: #f5f5f5;
 
-    .ttl-secondary {
-      font-size: 32px;
+    .des-icon-list {
+      justify-content: center;
       margin-bottom: 50px;
-    }
 
-    .card-list {
-      justify-content: flex-start;
+      .des-icon {
+        align-items: center;
 
-      .card-type10 {
-        width: calc(100% / 3 - 20px);
-        padding: 0;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.11);
-
-        .card--img {
-          position: relative;
-
-          .card__img--content {
-            color: #fff;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-          }
+        .des-icon-img {
+          width: 100px;
         }
 
-        .card--content {
-          padding: 25px 32px 30px;
-
-          .card__header--btn {
-            text-align: left;
-
-            .btn04 {
-              padding: 5px 20px;
-              font-size: 12px;
-              line-height: 13px;
-              margin-right: auto;
-              margin-left: 0;
-              margin-bottom: 15px;
-              width: auto;
-              display: inline-block;
-            }
-          }
-
-          .ttl-quaternary {
-            margin-bottom: 10px;
-          }
+        .des-icon-content {
+          width: calc(100% - 100px - 20px);
 
           .ttl-quinary {
-            margin-bottom: 15px;
-            text-align: right;
+            margin-bottom: 10px;
+            font-weight: 600;
           }
 
           .ttl-senary {
+            text-align: left;
+            font-size: 14px;
+          }
+        }
+      }
+    }
+
+    .question-list {
+      text-align: left;
+
+      .question-item {
+        padding: 70px 100px;
+        background-color: #fff;
+        margin-bottom: 50px;
+
+        .ttl-tertiary {
+          font-size: 26px;
+          margin-bottom: 20px;
+        }
+
+        .question-content {
+          .question-img {
+            width: calc(50% - 15px);
+          }
+
+          .question-txt {
+            width: calc(50% - 15px);
+          }
+        }
+
+        &:last-child {
+          margin-bottom: 70px;
+        }
+      }
+    }
+
+    .section-card {
+      .ttl-senary {
+        color: #0497b5;
+        font-size: 14px;
+        font-weight: bold;
+        margin-bottom: 14px;
+      }
+
+      .ttl-secondary {
+        font-size: 32px;
+        margin-bottom: 30px;
+      }
+
+      .card-item {
+        gap: 50px;
+        padding: 0 100px;
+        background-color: #fff;
+        align-items: center;
+        text-align: left;
+
+        .card-item--img {
+          width: 294px;
+        }
+
+        .card-item--content {
+          width: calc(100% - 50px -294px);
+
+          .ttl-tertiary {
+            font-size: 24px;
+            margin-bottom: 20px;
+          }
+
+          p {
             margin-bottom: 20px;
           }
         }
