--- a/app/pages/case/index.njk
+++ b/app/pages/case/index.njk
@@ -28,7 +28,7 @@
 
   <section class="section-primary">
     <div class="container-1200">
-      <h2 class="ttl-secondary">導入のきっかけや導入後の変化など、 <br> 実際にご利用いただいているお客様の声をご覧ください。</h2>
+      <div class="flex gap20"></div>
 
       <ul class="flex jcC gap30 card-list">
         <li class="card-type10">
@@ -269,7 +269,7 @@
       <div class="up-triangle"></div>
 
       <div class="section-img">
-        <img src="/assets/img/introduce_page/saison-fukurico.png" alt="">
+        <img src="/assets/img/common/saison-fukurico.png" alt="">
       </div>
 
       <h3 class="ttl-tertiary">
@@ -366,14 +366,14 @@
             <dd>福利厚生はただ導入をすればいいというものではなく、従業員に利用してもらうことに意味があります。セゾンフクリコは、多様化する従業員のニーズに応じた、幅広いサービスを各種取りそろえています。</dd>
 
             <div class="card-icon flex">
-              <div> <img src="/assets/img/introduce_page/carousel-01.png" alt=""></div>
-              <div> <img src="/assets/img/introduce_page/cutlery-set-01.png" alt=""></div>
-              <div> <img src="/assets/img/introduce_page/mirror-01.png" alt=""></div>
-              <div> <img src="/assets/img/introduce_page/golf-01.png" alt=""></div>
-              <div> <img src="/assets/img/introduce_page/book-01.png" alt=""></div>
-              <div> <img src="/assets/img/introduce_page/heart-in-hand-01.png" alt=""></div>
-              <div> <img src="/assets/img/introduce_page/flower-01.png" alt=""></div>
-              <div> <img src="/assets/img/introduce_page/bag-01.png" alt=""></div>
+              <div> <img src="/assets/img/common/carousel-01.png" alt=""></div>
+              <div> <img src="/assets/img/common/cutlery-set-01.png" alt=""></div>
+              <div> <img src="/assets/img/common/mirror-01.png" alt=""></div>
+              <div> <img src="/assets/img/common/golf-01.png" alt=""></div>
+              <div> <img src="/assets/img/common/book-01.png" alt=""></div>
+              <div> <img src="/assets/img/common/heart-in-hand-01.png" alt=""></div>
+              <div> <img src="/assets/img/common/flower-01.png" alt=""></div>
+              <div> <img src="/assets/img/common/bag-01.png" alt=""></div>
             </div>
 
             <div class="flex gap30 card-list">
@@ -424,7 +424,7 @@
       <h3 class="ttl-tertiary">ご法人様向け/個人事業主様向けプランをご用意しています。</h3>
 
       <div class="section-img">
-        <img src="/assets/img/introduce_page/saison-fukurico.png" alt="">
+        <img src="/assets/img/common/saison-fukurico.png" alt="">
       </div>
 
       <a href="#" class="btn03">セゾンフクリコをもっと詳しく</a>
