--- a/app/pages/personal/index.njk
+++ b/app/pages/personal/index.njk
@@ -17,13 +17,13 @@
 {# Main content #}
 {% block content %}
 
-<main class="personal-page">
+<main class="no17-page">
   <section class="section-welcome">
     <h3 class="ttl-tertiary">ビジネスオーナー様の「うれしい」をご提供！</h3>
 
     <h2 class="ttl-primary">個人事業主様向けサービス</h2>
 
-    <a href="#" class="orange_more">まとめて資料をダウンロードする</a>
+    <a href="#" class="btn02">まとめて資料をダウンロードする</a>
   </section>
 
   <section class="section-primary">
@@ -117,7 +117,7 @@
 
           <summary class="flex gap30 aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black_pill_btn small">解決策！</a>
+              <a href="#" class="btn04 small">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">ビジネスでの支払いを<span>セゾンのビジネスカードに一本化</span>することで経費計上の手間を簡略化！</div>
@@ -185,7 +185,7 @@
                   </div>
                 </div>
 
-                <a href="#" class="dark_blue_outline_btn small">カードの詳細はこちら</a>
+                <a href="#" class="btn03 small">カードの詳細はこちら</a>
               </li>
 
               <li class="card-type8">
@@ -209,7 +209,7 @@
                   </div>
                 </div>
 
-                <a href="#" class="dark_blue_outline_btn small">カードの詳細はこちら</a>
+                <a href="#" class="btn03 small">カードの詳細はこちら</a>
               </li>
             </ul>
           </div>
@@ -222,7 +222,7 @@
 
           <summary class="flex aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black_pill_btn small">解決策！</a>
+              <a href="#" class="btn04 small">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -238,7 +238,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark_blue_outline_btn small">支払い.comをもっと詳しく</a>
+          <a href="#" class="btn03 small">支払い.comをもっと詳しく</a>
         </div>
       </div>
 
@@ -248,7 +248,7 @@
 
           <summary class="flex gap20 aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black_pill_btn small">解決策！</a>
+              <a href="#" class="btn04 small">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -318,7 +318,7 @@
             </ul>
           </div>
 
-          <a href="#" class="dark_blue_outline_btn">セゾンビジネスサポートローンをもっと詳しく</a>
+          <a href="#" class="btn03">セゾンビジネスサポートローンをもっと詳しく</a>
         </div>
       </div>
     </div>
@@ -330,7 +330,7 @@
 
     <h3 class="ttl-tertiary">興味のあるサービス資料をまとめてダウンロードできます。</h3>
 
-    <a href="#" class="orange_more">まとめて資料をダウンロードする</a>
+    <a href="#" class="btn02">まとめて資料をダウンロードする</a>
   </section>
 
   <section class="section-quaternary">
@@ -353,7 +353,7 @@
 
           <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネスカードに求める事項が備わっているか・・</h6>
 
-          <a href="#" class="dark_blue_outline_rounded_btn small">インタビューの続きを見る</a>
+          <a href="#" class="btn05 small">インタビューの続きを見る</a>
         </div>
 
         <div class="card-type10">
